<resources>
    <string name="app_name">Sleep Shift</string>

    <!-- Main Screen-->
    <string name="main_sleep">Start a sleep shift.</string>
    <string name="existing_sleep">View current sleep schedule.</string>
    <string name="main_history">My history.</string>

    <!-- Transition Strings -->
    <string name="transition_main_input">transition from main to input</string>
    <string name="transition_input_flight">transition from input to flight</string>
    <string name="transition_main_graph">transition from main to graph</string>

    <!-- Activity Names -->
    <string name="title_activity_input_selection">InputSelectionActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="title_activity_input_location">InputLocationActivity</string>
    <string name="title_activity_origin_time">OriginTime</string>
    <string name="title_evaluation_activity">EvaluationActivity</string>

    <!--Destination and Date input screen -->
    <string name="leaving_from">I will be leaving from: </string>
    <string name="origin">Origin Time Zone</string>
    <string name="traveling_to">and traveling to: </string>
    <string name="destination">Destination Time Zone</string>
    <string name="on_date">on this date: </string>
    <string name="date">Date</string>

    <!-- defaults-->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>


    <!--origin time selection screen-->
    <string name="origin_sleep_time_title">I usually sleep at: </string>
    <string name="origin_wake_time_title">I usually wake up at: </string>
    <string name="sleep_time">Sleep Time</string>
    <string name="wake_time">Wake Time</string>
    <string name="title_activity_sleep_strategy">SleepStrategySelection</string>

    <!-- Sleep Strategy Selection screen -->
    <string name="title_sleep_strategy">Select optional strategies that would you like to include in your sleep plan (hold selection for more info): </string>
    <string name="melatonin">Scheduled Melatonin</string>
    <string name="melatonin_exp">Receive reminder notifications to take melatonin at the most effective time for sleep cycle adjustment.</string>
    <string name="light_exposure">Light Exposure Control</string>
    <string name="light_exposure_exp">[Smartwatch required] Monitor your environmental light intensity and control your light exposure to adjust your
        body\'s internal circadian rhythm.</string>
    <string name="title_activity_input_summary">InputSummaryActivity</string>
    <string name="melatonin_explanation">Melatonin is a natural hormone that the body produces to induce sleep. Melatonin
        is produced when it is dark, and melatonin production is directly inhibited by light. Thus, users who need to sleep
        earlier than they are used to may find taking melatonin to be helpful in helping them fall asleep when they need to. As a
        result, studies have shown that melatonin has been especially effective in helping prevent jet lag in this way.</string>
    <string name="light_control_explanation">Whether our bodies\' natural circadian rhythms align with the
        environment are determined by several factors, with one of the most important ones being light. Bright light exposure
        can cause a \'phase shift\', an advance or delay in circadian rhythms. Thus, by carefully controlling our exposure to light,
        we can use phase shifting to help adjust our circadian rhythms to match our destination\'s time zone, preventing jet lag.</string>
    <string name = "sine_curve_explanation">
        The top horizontal axis represents time in your set origin, while the bottom horizontal axis represents time in your destination.
        Your target sleep period is outlined in yellow, while your sleep period for the night is outlined in blue.
        The periodic curve approximates the daylight cycle of your destination, with the darker sections of the curve representing sundown periods.
    </string>

    <!--Input Summary screen -->
    <string name="summary_title">Summary and Evaluation</string>

    <!--Evaluation Screen-->
    <string name="feedback">How did the strategy work for you?</string>

    <!--History Screen-->
    <string name="title">Your History</string>
    <string name="empty">Your History is empty!</string>
    <string name="old">View old schedule</string>
    <string name="no_comment">No comments</string>

    <!-- Schedule Agenda Items -->
    <string name="sleep_start_time">Go to sleep</string>
    <string name="sleep_end_time">Wake up</string>
    <string name="melatonin_time">Take melatonin</string>
    <string name="light_on_time">Increase light exposure</string>
    <string name = "light_off_time">Decrease light exposure</string>

    <string name="sleep_schedule_expired">Your sleep schedule is complete.</string>
    <string name="title_activity_history_summary_activity">history_summary_activity</string>

</resources>
