<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iantoxi.jetlagtrainer.InputLocationActivity">


    <ImageView
        android:transitionName="@string/transition_main_input"
        android:layout_width="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_height="wrap_content"
        android:src="@drawable/sleep_training"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:paddingTop="50dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/leaving_from"/>
        <Button
            android:id="@+id/origin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/origin"
            android:textColorHint="#33FFFFFF"
            android:background="?android:selectableItemBackground"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:onClick="setOrigin"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/traveling_to"/>
        <Button
            android:id="@+id/destination"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#33FFFFFF"
            android:background="?android:selectableItemBackground"
            android:text="@string/destination"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:onClick="setDestination"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/on_date"/>

        <Button
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:text="@string/date"
            android:textSize="25sp"
            android:padding="10dp"
            android:onClick="setDate"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"/>

</RelativeLayout>
