<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:transitionName="@string/transition_main_input"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_height="wrap_content"
        android:src="@drawable/sleep_training"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/title_sleep_strategy"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColorHint="#33FFFFFF"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical">

        <RadioButton
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/melatonin"
            android:textSize="25sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/melatonin_exp"
        android:textSize="17sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical">

        <RadioButton
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/light_exposure"
            android:textSize="25sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/light_exposure_exp"
        android:textSize="17sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="Next"/>


</LinearLayout>