<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:transitionName="@string/transition_main_input"
        android:layout_width="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_height="wrap_content"
        android:src="@drawable/sleep_training"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/origin_sleep_time_title"/>
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#15000000">
            <Button
                android:id="@+id/sleep_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sleep_time"
                android:textColorHint="#33FFFFFF"
                android:background="?android:selectableItemBackground"
                android:textSize="25sp"
                android:padding="10dp"
                android:onClick="setSleepTime"
                />
        </FrameLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/origin_wake_time_title"/>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#15000000">
            <Button
                android:id="@+id/wake_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#33FFFFFF"
                android:background="?android:selectableItemBackground"
                android:hint="@string/wake_time"
                android:textSize="25sp"
                android:padding="10dp"
                android:onClick="setWakeTime"
                />
        </FrameLayout>

    </LinearLayout>


    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/teal">
        <Button
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkPurple"
            android:textColor="#44FFFFFF"
            android:textSize="25sp"
            android:padding="15dp"
            android:text="Next"/>
    </FrameLayout>

</RelativeLayout>