<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical">

        <!-- New Sleep Shift Section-->
        <RelativeLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="50">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/sleep_training_graphic"
                    android:transitionName="@string/transition_main_input"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sleep_training"/>

                <TextView
                    style="@style/bodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/main_sleep"
                    android:paddingTop="20dp"
                    android:paddingBottom="40dp"
                    />

            </LinearLayout>

            <Button
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:background="?android:selectableItemBackground"
                android:onClick="launchNewSleepShiftInput">
            </Button>

        </RelativeLayout>

        <!-- Visit History Section -->
        <RelativeLayout
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_weight="50"
            android:background="@color/darkPurple">

            <ImageView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="45dp"
                android:src="@drawable/history"/>

            <TextView
                style="@style/bodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/main_history"
                android:textAlignment="center"
                android:paddingTop="45dp"
                />

            <Button
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:background="?android:selectableItemBackground"
                android:onClick="launchHistory">
            </Button>

        </RelativeLayout>

    </LinearLayout>

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="CYCLE SHIFT"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:textSize="50dp"-->
        <!--android:textColor="#66FFFFFF"-->
        <!--/>-->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="125dp"
        android:layout_height="126dp"
        android:src="@drawable/logo_big"
        android:layout_centerInParent="true"
        />

</RelativeLayout>
